Ready for first Netlify deploy

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Affiliate Ally</title>
   <link rel="stylesheet" href="public/style.css">
+  <link rel="icon" href="public/favicon.ico">
+
+  <!-- SEO & Open Graph -->
+  <meta name="description" content="Affiliate Ally – Quick cash offers with zero investment.">
+  <meta property="og:title" content="Affiliate Ally 💸">
+  <meta property="og:description" content="Your gateway to fast cash with zero investment.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://affiliate-ally.netlify.app">
+  <meta property="og:image" content="https://affiliate-ally.netlify.app/public/preview.png">
 </head>
 <body>
   <header class="hero">
@@ -22,7 +31,7 @@
       </a>
     </section>
 
-    <!-- Affiliate links will be injected here -->
+    <!-- Affiliate links injected by app.js -->
     <div id="referral-sectors"></div>
   </main>
 
